修改1000个常用单词

--- a/单词记忆/1000个常用单词.md
+++ b/单词记忆/1000个常用单词.md
@@ -2,50 +2,50 @@
 My name is Koko.Lucy is my mother.Tom is my father.They are my parents.Wendy is my grandmother.Steven is my grandfather.Cindy is my aunt.Bob is my uncle.Rola is my sister.She is my father's daughter.Peter is my brother.He is my father's son.Better is my cousin.She is my friend.I like my family
 
 ## 人的称呼
-husband 丈夫
-madam n. 夫人
-Mrs n. 夫人，太太
-neighbo(u)r n.邻居 
-kid n.小孩
-also n. 另外，也
+- husband 丈夫
+- madam n. 夫人
+- Mrs n. 夫人，太太
+- neighbo(u)r n.邻居 
+- kid n.小孩
+- also n. 另外，也
 
 My father is a man.My mother is a woman.They are wife and husband.They are very kind.People call my father gentleman and people call my mother lady.My parents have many friends.Some friends call my father Mr Green and some call my mother Mrs Green.My mother looks very young,so some neighbors call my mother Miss Jones.
 My parent have two children.They are a boy and a girl.I am a boy.My sister is a girl.My parents like every kid.They call us baby.We also call my father sir and we call my mother madam.Every person in my family is very happy.
 ## 职业名称
-scientist n. 科学家
-clerk n.职员
-manager n.经理
-businessman n.男商人
-businesswoman n.女商人
-assistant n.助理
-artist n.艺术家，画家
-actor n.男演员
-actress n.女演员
-waiter n.男服务员
-waitress n.女服务员
-postman n.邮递员
-worker n.工人
+- scientist n. 科学家
+- clerk n.职员
+- manager n.经理
+- businessman n.男商人
+- businesswoman n.女商人
+- assistant n.助理
+- artist n.艺术家，画家
+- actor n.男演员
+- actress n.女演员
+- waiter n.男服务员
+- waitress n.女服务员
+- postman n.邮递员
+- worker n.工人
 
 Every person in my family has a job.My grandfather is a teacher.He has many students and he wants to become a scientist.My grandmother is a doctor .She has a nurse but she want to become an engineer.My father is a boss and he is a good businessman.He has a manager and many clerks.His assistant often helps him.
 My monther is an artist.She is an actress and musician.My uncle is a worker.He is a postman.My aunt is a waitress.My brother is a policeman.My sister is a driver.My cousin is writer.I am a farmer.
 
 ## 公共场所
-by prep.在...附近
-beside prep. 在...旁边
-near prep. 在...附近
-behind prep 在...后面
-in front of prep. 在...前部
-building n.建筑物
-playground n.操场
-airport n.机场
-farm n.农场
-cinema n.电影院
-hotel n.旅馆
-museum n.博物馆
-post office n. 邮局
-park n.公园
-restaurant n.餐馆
-stadium n.体育馆
+- by prep.在...附近
+- beside prep. 在...旁边
+- near prep. 在...附近
+- behind prep 在...后面
+- in front of prep. 在...前部
+- building n.建筑物
+- playground n.操场
+- airport n.机场
+- farm n.农场
+- cinema n.电影院
+- hotel n.旅馆
+- museum n.博物馆
+- post office n. 邮局
+- park n.公园
+- restaurant n.餐馆
+- stadium n.体育馆
 
 There are many buildings in Shenzhen.There are many offices in the buildings.There is a playground in a scholl.There is a library in the school.There is a park near the school .There is a museum near the park.There is a bank near the museum.There is a supermarkey by the museum
 There is a shop by the supermarket.There is a cinema beside the shop.There is a farm beside the cinema.There is a restaurant in front of the shop.There is a hotel in front of the restaurant.There is a hospital behind the hotel.There is a stadium behind the hospital.There is an airport behind the stadium.
