--- a/单词记忆/1000个常用单词.md
+++ b/单词记忆/1000个常用单词.md
@@ -50,3 +50,68 @@ My monther is an artist.She is an actress and musician.My uncle is a worker.He i
 There are many buildings in Shenzhen.There are many offices in the buildings.There is a playground in a scholl.There is a library in the school.There is a park near the school .There is a museum near the park.There is a bank near the museum.There is a supermarkey by the museum
 There is a shop by the supermarket.There is a cinema beside the shop.There is a farm beside the cinema.There is a restaurant in front of the shop.There is a hotel in front of the restaurant.There is a hospital behind the hotel.There is a stadium behind the hospital.There is an airport behind the stadium.
 
+## 数字
+- eleven num.十一
+- twelve num.十二
+- thirteen num.十三
+- fourteen num.十四
+- fifteen num.十五
+- sixteen num.十六
+- seventeen num.十七
+- eighteen num.十八
+- nineteen num.十九
+- twenty num.二十
+- thirty num.三十
+- forty num.四十
+- fifty num.五十
+- sixty num.六十
+- seventy num.七十
+- eight num.八十
+- ninety num.九十
+- hundred num.百
+- thousand num.千
+- millon num.百万
+- have vt.拥有
+- has vt.拥有
+
+My grandfather is a teacher.He is eighty.He has two million students. My grandmother is a doctor.She is seventy-five.She has three thousand friends.My father is a boss.He is fifty.He has two assistants and five hundred clerks.My mother is a scientist.She is forty.My uncle is an engineer.He is thirty.My aunt is an actor.She is twenty-nine.My sister is twelve and my brother is fifteen .I am ten.
+
+## 人的身体
+- arm n.手臂
+- ear n.耳朵
+- eye n.眼睛
+- face n.脸
+- foot n.脚
+- hair n.头发
+- hand n. 手
+- head n.头
+- leg n.腿
+- mouth n.嘴巴
+- nose n.鼻子
+- tooth n.牙齿
+
+I have a good body.I have a head and some hair.I have a face and two eyes.I have a mouth and fice teeth.I have a nose and two hands.I hace two arms and two ears.I hace two legs and two feet.
+
+## 动物植物
+- plant n.植物
+- tree n.树
+- flower n.花
+- animal n.动物
+- bird n.鸟
+- chicken n.小鸡、鸡肉
+- fish n.鱼，鱼肉
+- rabbit n. 兔子
+- cat n. 猫
+- horse n.马
+- sheep n.绵羊
+- elephant n.大象
+- panda n.熊猫
+- giraffe n.长颈鹿
+- monkey n.猴子
+- pig n.猪
+- tiger n.老虎
+- lion n.狮子
+- zoo n.动物园
+
+Every person in my family likes animals.My father likes a dog.My monther likes a cat.My grandfather loves a chicken.My grandmother loves a horse.My uncle likes a rabbit.My aunt loves a sheep.My brother likes fish.My sister loves a bird.My cousin likes a panda.I like an elephant and a giraffe.There is a big zoo near my house.
+There are many plants in the zoo.such as a tree and a flower.There are alse many animals in the zoo.There is a tiger beside some elephants.There are some lions near the tiger.There are some pigs near the lions.There are some monkeys beside the pigs.There are some pandas by the monkeys.I often go to the zoo with my family
