现在进行时

--- a/单词记忆/1000个常用单词.md
+++ b/单词记忆/1000个常用单词.md
@@ -115,3 +115,18 @@ I have a good body.I have a head and some hair.I have a face and two eyes.I have
 
 Every person in my family likes animals.My father likes a dog.My monther likes a cat.My grandfather loves a chicken.My grandmother loves a horse.My uncle likes a rabbit.My aunt loves a sheep.My brother likes fish.My sister loves a bird.My cousin likes a panda.I like an elephant and a giraffe.There is a big zoo near my house.
 There are many plants in the zoo.such as a tree and a flower.There are alse many animals in the zoo.There is a tiger beside some elephants.There are some lions near the tiger.There are some pigs near the lions.There are some monkeys beside the pigs.There are some pandas by the monkeys.I often go to the zoo with my family
+
+## 颜色服饰
+- wear v.穿、戴
+- clothers n.衣服
+- cap n.帽子（有边的）
+- hat n.帽子
+- jacket n.夹克衫
+- throusers n.裤子
+- jeans n.牛仔裤
+- glasses n.眼镜
+- favourite adj.最喜欢的
+- brown n.棕色；adj.棕色的
+
+Every person in my family has he or her favorite color.My father's favorite color is red,so he often wears red clothes.My mother's favorite color is white,so she wears a white dress and white skirt.Yellow is my grandfather's favorite color,so he usually wears a yellow cap or a yellow hat.Brown is my grandmother's favorite color,so she often wears brown trouers and brown glasses.
+Blur is my uncle's favorite color,so he often wear a blue shirt and a blue coat.Green is my aunt's favorite color,so she always wears a green jacket.My sister's favorite color is black,so she always wears black jeans and shoes.My brother's favorite color is pink,so he often wears pink coat.My favorite color is orange and I have many orange umbrellas.
