一般现在时

--- a/初级语法/一般现在时.md
+++ b/初级语法/一般现在时.md
@@ -81,3 +81,51 @@
   - teach->teaches
   - wash->washes.
   - fix->fixes.
+
+变换方法及读音规则类似名词变复数。
+
+**注意：**
+名词两个以上时需加-s.-es;动词在一般现在时态里主语为第三人称单数时需加-s,-es。
+
+Sample 
+ - Linda likes music.
+ - My brotherlikes grapes.
+ - Mr.Bird likes steak.
+ - Mrs. Bird wants some beef.
+
+否定句和疑问句类第1中结构，只需把do改成dose。
+
+**注意：**
+加上does之后，动词一定改回原形！！！
+ - Dose Linda like music?
+ - Linda dosen't like music.
+
+**记口诀：＊＊
+见助动，用原形。
+- What dose Linda like?
+- Where does Linda live?
+- Dose Mr.Bird like steak?
+- Yes,he dose.
+- No,he dosen't.
+
+翻译：先确定动词是什么？其次确定主语是什么？
+- 大卫喜欢一个中国女孩。
+- David likes a Chinese girl.
+- 那个女孩儿的名字叫Lucy。
+- They girl's name is Lucy
+- 澳大利亚是一个美丽的国家。
+- Australia is a beautiful country.
+- 我的姑妈住在澳大利亚。
+- My aunt lives in Australia.
+- 我的父母不住在在北京。
+- My parents don't live in Beijing.
+- 我想念我的父母。
+- I miss my parents.
+- Richard有一个儿子。
+- Richard has a son.
+- 那个男孩很可爱。
+- They　boy is very cute.
+- 他有很多钱。
+- He has a lot of money.
+- 他每年买一个手机。
+- He buys a phone every year.
