--- a/单词记忆/1000个常用单词.md
+++ b/单词记忆/1000个常用单词.md
@@ -130,3 +130,19 @@ There are many plants in the zoo.such as a tree and a flower.There are alse many
 
 Every person in my family has he or her favorite color.My father's favorite color is red,so he often wears red clothes.My mother's favorite color is white,so she wears a white dress and white skirt.Yellow is my grandfather's favorite color,so he usually wears a yellow cap or a yellow hat.Brown is my grandmother's favorite color,so she often wears brown trouers and brown glasses.
 Blur is my uncle's favorite color,so he often wear a blue shirt and a blue coat.Green is my aunt's favorite color,so she always wears a green jacket.My sister's favorite color is black,so she always wears black jeans and shoes.My brother's favorite color is pink,so he often wears pink coat.My favorite color is orange and I have many orange umbrellas.
+
+## 房子结构
+- garden n.花园
+- swimming pool n.游泳池
+- dinning-room n.饭厅
+- living-room n.客厅
+- kitchen n.厨房
+- floor n.楼层，地板
+- door n.门
+- window n.窗户
+- wall n.墙
+- in the middle prep.在...中央
+- under prep. 在...下面
+
+I have a house .There is a garden in front of the house.There is a swimming pool in the garden.There are three floors in the house.There are many rooms in the house.There is a living room,a bathroom,a kitchen,and five bedrooms.The living room is in the middle of the house
+The dinning room is near my bedroom.The kitchen is by the dinning room.The are some windows and doors in the wall.Some doors are under the windows.I like my house becuase this is my home.
