--- a/单词记忆/1000个常用单词.md
+++ b/单词记忆/1000个常用单词.md
@@ -146,3 +146,20 @@ Blur is my uncle's favorite color,so he often wear a blue shirt and a blue coat.
 
 I have a house .There is a garden in front of the house.There is a swimming pool in the garden.There are three floors in the house.There are many rooms in the house.There is a living room,a bathroom,a kitchen,and five bedrooms.The living room is in the middle of the house
 The dinning room is near my bedroom.The kitchen is by the dinning room.The are some windows and doors in the wall.Some doors are under the windows.I like my house becuase this is my home.
+
+## 家用电器
+- radio n.收音机
+- television n.电视机
+- fridge n.冰箱
+- thing n.东西、事情
+- table n.桌子
+- clock n.时钟
+- toy n. 玩具
+- bottel n.瓶子
+- bowl n.碗
+- glass n.玻璃杯
+- rubbish n.垃圾
+- bin n.垃圾箱
+
+There are many things in my house.There is a table in the living room,There is a computer on the table.There is a radio under the table.There is a Camera near the computer.There is a fridge by the table.There is a TV near the fridge.There is a telephone beside the TV.There are also some chairs in the living room.There are some photos and a big picture on the wall.There is a clock under the picture.
+There is a big in my bedroom.There are some toys under the bed.There is alse a big table in the kitchen.There are some bottels and some bowls on the table.There is a big basket under the table.There are some cups and some glasses in the basket.There is a big bin beside the basket.There is some rubbish in the bin.
