--- a/单词记忆/1000个常用单词.md
+++ b/单词记忆/1000个常用单词.md
@@ -163,3 +163,28 @@ The dinning room is near my bedroom.The kitchen is by the dinning room.The are s
 
 There are many things in my house.There is a table in the living room,There is a computer on the table.There is a radio under the table.There is a Camera near the computer.There is a fridge by the table.There is a TV near the fridge.There is a telephone beside the TV.There are also some chairs in the living room.There are some photos and a big picture on the wall.There is a clock under the picture.
 There is a big in my bedroom.There are some toys under the bed.There is alse a big table in the kitchen.There are some bottels and some bowls on the table.There is a big basket under the table.There are some cups and some glasses in the basket.There is a big bin beside the basket.There is some rubbish in the bin.
+
+## 自然地理
+- space n.太空，空间
+- place n.地方
+- earth n.地球
+- moon n.月亮
+- star n.星星
+- land n.陆地
+- air n.空气，大气
+- sky n.天空
+- spaceship n.宇宙飞船
+- world n.世界
+- lake n.湖
+- mountain n.高山
+- hill n.小山
+- forest n.森林
+- beach n.海滩
+- island n.岛屿
+- stone n.石头
+- sand n.沙子
+- soil n.土壤，泥土
+- ground n.地面
+
+Space is very big place.There is a sun、a moon and many stars in the space.There are many animals and plants on the earth.Some animals are in the water and some animals are on the land.There is some air in the sky.People in the world can go to the moon by spaceship.There is much water in the seas、river and lakes.There are some beaches near seas.
+There are many islang in the rivers and seas ,There are many mountains and hills on the land.There are some forests on the land.There are some stones 、sand and soil under the ground.we should love the earth.
